--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,16 +1,24 @@
 server.port=8090
 
-# Eureka client
+
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
-# Spring Cloud Gateway routes
+
+
+
+
 spring.cloud.gateway.server.webmvc.routes[0].id=booking-service
 spring.cloud.gateway.server.webmvc.routes[0].uri=lb://BOOKINGSERVICE
 spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/booking/**
 
+
 spring.cloud.gateway.server.webmvc.routes[1].id=flight-service
 spring.cloud.gateway.server.webmvc.routes[1].uri=lb://FLIGHTSERVICE
 spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/flights/**
+
+spring.cloud.gateway.server.webmvc.routes[2].id=auth-service
+spring.cloud.gateway.server.webmvc.routes[2].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/api/auth/**
