--- a/BookingService.properties
+++ b/BookingService.properties
@@ -11,3 +11,40 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
+
+# ---- Circuit Breaker config for calls to flight-service ----
+resilience4j.circuitbreaker.instances.flightService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.flightService.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.flightService.sliding-window-size=2
+resilience4j.circuitbreaker.instances.flightService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.flightService.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.flightService.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.flightService.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.flightService.minimum-number-of-calls=2
+
+spring.cloud.openfeign.loadbalancer.enabled=false
+
+feign.circuitbreaker.enabled=true
+#spring.cloud.loadbalancer.health-check.simple.enabled=false
+#spring.cloud.loadbalancer.retry.enabled=true
+#spring.cloud.loadbalancer.enabled=true
+#spring.cloud.loadbalancer.ribbon.enabled=false
+
+
+resilience4j.circuitbreaker.instances.flightService.ignore-exceptions=\
+com.bookingservice.exceptions.BusinessException,\
+com.bookingservice.exceptions.BadRequestException,\
+com.bookingservice.exceptions.ConflictException
+
+
+
+# Kafka bootstrap server
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+
+logging.level.io.github.resilience4j=DEBUG
+logging.level.org.springframework.cloud.circuitbreaker=DEBUG
