--- a/api-gateway-docker.properties
+++ b/api-gateway-docker.properties
@@ -1,24 +1,21 @@
+
 server.port=8090
 
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
-
-
-
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+eureka.instance.hostname=api-gateway
 
 
 spring.cloud.gateway.server.webmvc.routes[0].id=BookingService
-spring.cloud.gateway.server.webmvc.routes[0].uri=lb://BOOKINGSERVICE
+spring.cloud.gateway.server.webmvc.routes[0].uri=lb://BookingService
 spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/booking/**
 
-
 spring.cloud.gateway.server.webmvc.routes[1].id=FlightService
-spring.cloud.gateway.server.webmvc.routes[1].uri=lb://FLIGHTSERVICE
+spring.cloud.gateway.server.webmvc.routes[1].uri=lb://FlightService
 spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/flights/**
 
 spring.cloud.gateway.server.webmvc.routes[2].id=auth-service
-spring.cloud.gateway.server.webmvc.routes[2].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.server.webmvc.routes[2].uri=lb://auth-service
 spring.cloud.gateway.server.webmvc.routes[2].predicates[0]=Path=/api/auth/**
