--- a/auth-service-docker.properties
+++ b/auth-service-docker.properties
@@ -1,11 +1,11 @@
 server.port=8083
 
-spring.data.mongodb.uri=mongodb://localhost:27017/authdb
+spring.data.mongodb.uri=mongodb://mongodb:27017/authdb
 
 eureka.instance.prefer-ip-address=true
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
