--- a/BookingService.properties
+++ b/BookingService.properties
@@ -3,7 +3,7 @@
 server.port=8081
 
 # MongoDB
-spring.mongodb.uri=mongodb://localhost:27017/booking_microdb
+spring.data.mongodb.uri=mongodb://localhost:27017/booking_microdb
 
 # Eureka
 eureka.client.register-with-eureka=true
