--- a/FlightService.properties
+++ b/FlightService.properties
@@ -4,7 +4,7 @@ server.port=8080
 
 # MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/flight_microdb
-spring.data.mongodb.database=flight_microdb
+spring.mongodb.database=flight_microdb
 
 # Eureka
 eureka.client.register-with-eureka=true
