--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -15,7 +15,7 @@ spring.cloud.gateway.server.webmvc.routes[0].uri=lb://BOOKINGSERVICE
 spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/booking/**
 
 
-spring.cloud.gateway.server.webmvc.routes[1].id=FlightService
+spring.cloud.gateway.server.webmvc.routes[1].id=flight-service
 spring.cloud.gateway.server.webmvc.routes[1].uri=lb://FLIGHTSERVICE
 spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/flights/**
 
